set banner section and made it responsive

--- a/index.html
+++ b/index.html
@@ -10,14 +10,39 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
   <!-- fontawesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/70.0/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+
 </head>
 
-<body>
-
+<body class="manrop-font m-7">
+  <main>
+    <section class="mx-auto container flex flex-col md:flex-row gap-[20px] max-w-[1250px] mt-10">
+      <div class="md:order-2">
+        <img src="./images/banner.png" class="md:relative top-[80px]" alt="">
+        <div class="hidden md:flex gap-4 items-center max-w-[250px] relative z-50 left-[90px] top-[-40px] h-[100px] bg-white rounded-[10px] shadow-md">
+          <span class="ml-4 text-4xl">
+            <i class="fa-solid fa-star text-[#ffdc64] mx"></i>
+          </span>
+            <div>
+              <p class="text-3xl font-bold text-[#1c1c1c]">5.00</p>
+              <p class="text-[#777777]">Trust Pilot Ratings</p>
+            </div>
+        </div>
+      </div>
+      <div>
+        <h1 class="text-[80px] font-bold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
+        <p class="text-[#777777] text-[18px] font-medium mb-3.5">Tea and Botanical Solutions Supplier Give Optimum <br>
+          Satisfaction To Your Taste Buds.</p>
+        <button
+          class="text-white bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-[10px] p-4 text-[20px] font-medium">Explore
+          More <span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
+      </div>
+      
+    </section>
+  </main>
 </body>
 
 </html>
