added featured section and resposived

--- a/index.html
+++ b/index.html
@@ -19,29 +19,67 @@
 
 <body class="manrop-font m-7">
   <main>
-    <section class="mx-auto container flex flex-col md:flex-row gap-[20px] max-w-[1250px] mt-10">
+    <!-- banner section starts here -->
+    <section class="mx-auto container flex flex-col md:flex-row gap-[10px] min-h-[200px] max-w-[1250px] mt-10">
       <div class="md:order-2">
-        <img src="./images/banner.png" class="md:relative top-[80px]" alt="">
-        <div class="hidden md:flex gap-4 items-center max-w-[250px] relative z-50 left-[90px] top-[-40px] h-[100px] bg-white rounded-[10px] shadow-md">
+        <img src="./images/banner.png" class="mx-auto md:relative top-[80px]" alt="">
+        <div
+          class="hidden md:flex gap-4 items-center max-w-[250px] relative z-50 left-[90px] top-[-40px] h-[100px] bg-white rounded-[10px] shadow-md">
           <span class="ml-4 text-4xl">
             <i class="fa-solid fa-star text-[#ffdc64] mx"></i>
           </span>
-            <div>
-              <p class="text-3xl font-bold text-[#1c1c1c]">5.00</p>
-              <p class="text-[#777777]">Trust Pilot Ratings</p>
-            </div>
+          <div>
+            <p class="text-3xl font-bold text-[#1c1c1c]">5.00</p>
+            <p class="text-[#777777]">Trust Pilot Ratings</p>
+          </div>
         </div>
       </div>
       <div>
-        <h1 class="text-[80px] font-bold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
-        <p class="text-[#777777] text-[18px] font-medium mb-3.5">Tea and Botanical Solutions Supplier Give Optimum <br>
+        <h1 class="text-[50px] md:text-[80px] font-bold text-[#1C1C1C]">It's good<br>tea time at The<br>Tea House</h1>
+        <p class="text-[#777777] text-[18px] font-medium mb-3.5 ml-1">Tea and Botanical Solutions Supplier Give Optimum <br>
           Satisfaction To Your Taste Buds.</p>
         <button
           class="text-white bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-[10px] p-4 text-[20px] font-medium">Explore
           More <span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
       </div>
-      
+
     </section>
+
+    <!-- featured section starts here -->
+    <section class="text-center mt-12">
+      <h1 class="font-medium text-[45px] text-[#1c1c1c]">Our Featured Products</h1>
+      <p class="text-[#777777] max-w-[1050px] mx-auto">Experience the perfect cup with our premium teas—handpicked
+        leaves, rich aroma, soothing flavors, and natural freshness. Every sip rejuvenates your senses, offering a
+        moment of calm, warmth, and pure enjoyment for every passionate tea lover.</p>
+      <div class="grid grid-cols-1 gap-5 md:gap-0 md:grid-cols-2 lg:grid-cols-4 lg:gap-3 justify-center mt-12">
+        <div
+          class="bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] max-w-[267px] max-h-[391px] p-6 rounded-[10px] mx-auto">
+          <img src="./images/tea-1.png" class="mx-auto mb-5" alt="">
+          <h3 class="text-[25px] font-bold text-[#1C1C1C] mb-2.5">Milk Tea</h3>
+          <p class="text-[16px] text-[#777777]">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div
+          class="bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] max-w-[267px] max-h-[391px] p-6 rounded-[10px] mx-auto">
+          <img src="./images/tea-2.png" class="mx-auto mb-5" alt="">
+          <h3 class="text-[25px] font-bold text-[#1C1C1C] mb-2.5">Black Tea</h3>
+          <p class="text-[16px] text-[#777777]">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div
+          class="bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] max-w-[267px] max-h-[391px] p-6 rounded-[10px] mx-auto">
+          <img src="./images/tea-3.png" class="mx-auto mb-5" alt="">
+          <h3 class="text-[25px] font-bold text-[#1C1C1C] mb-2.5">Lemon Tea</h3>
+          <p class="text-[16px] text-[#777777]">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div
+          class="bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] max-w-[267px] max-h-[391px] p-6 rounded-[10px] mx-auto">
+          <img src="./images/tea-4.png" class="mx-auto mb-5" alt="">
+          <h3 class="text-[25px] font-bold text-[#1C1C1C] mb-2.5">Green Tea</h3>
+          <p class="text-[16px] text-[#777777]">Creamer could be replaced by fresh milk</p>
+        </div>
+      </div>
+    </section>
+
+
   </main>
 </body>
 
