--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="manrop-font m-7">
   <main>
     <!-- banner section starts here -->
-    <section class="mx-auto container flex flex-col md:flex-row gap-[10px] min-h-[200px] max-w-[1250px] mt-10">
+    <section class="container flex flex-col md:flex-row gap-[10px] min-h-[200px] mx-auto max-w-[1250px] mt-10">
       <div class="md:order-2">
         <img src="./images/banner.png" class="mx-auto md:relative top-[80px]" alt="">
         <div
@@ -36,7 +36,8 @@
       </div>
       <div>
         <h1 class="text-[50px] md:text-[80px] font-bold text-[#1C1C1C]">It's good<br>tea time at The<br>Tea House</h1>
-        <p class="text-[#777777] text-[18px] font-medium mb-3.5 ml-1">Tea and Botanical Solutions Supplier Give Optimum <br>
+        <p class="text-[#777777] text-[18px] font-medium mb-3.5 ml-1">Tea and Botanical Solutions Supplier Give Optimum
+          <br>
           Satisfaction To Your Taste Buds.</p>
         <button
           class="text-white bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-[10px] p-4 text-[20px] font-medium">Explore
@@ -46,7 +47,7 @@
     </section>
 
     <!-- featured section starts here -->
-    <section class="text-center mt-12">
+    <section class="text-center my-12 mx-auto max-w-[1250px]">
       <h1 class="font-medium text-[45px] text-[#1c1c1c]">Our Featured Products</h1>
       <p class="text-[#777777] max-w-[1050px] mx-auto">Experience the perfect cup with our premium teas—handpicked
         leaves, rich aroma, soothing flavors, and natural freshness. Every sip rejuvenates your senses, offering a
@@ -79,6 +80,28 @@
       </div>
     </section>
 
+    <!-- green tea and fresh tea -->
+    <section class="flex flex-col md:flex-row gap-7 mb-12 mx-auto max-w-[1250px]">
+      <div class="grid grid-cols-2 grid-rows-3 gap-7 md:w-1/2">
+        <div class="bg-gradient-to-l from-[#ff0000] to-[#ff8938] opacity-10 rounded-[10px]"></div>
+        <div class="flex justify-center items-center p-6 md:p-12 bg-[#e6a6231a] row-span-2 rounded-[10px]"><img src="./images/fresh-1.png" alt=""></div>
+        <div class="flex justify-center items-center p-8 md:p-12 bg-[#5776391a] row-span-2 rounded-[10px]"><img src="./images/fresh-2.png" alt=""></div>
+        <div class="bg-gradient-to-r from-[#d9d9d9] to-[#ffffff00] rounded-[10px]"></div>
+      </div>
+      <div class="md:w-1/2">
+        <h1 class="text-[#1c1c1c] text-[45px] font-bold">Great Tea, Freshly <br> Presented</h1>
+        <p class="text-[#777777] text-[16px] font-bold my-5">The meaning of gong cha is chanese is to provide the best
+          tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in
+          2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and unique
+          customized service orginated from Taiwan.</p>
+        <h4 class="text-[#1c1c1c] text-[20px] font-bold">Unique Taste</h4>
+        <p class="text-[#777777] text-[16px] font-bold my-5">A Unique and different style from other teapots gives a
+          luxurious and minimalist impression</p>
+        <h4 class="text-[#1c1c1c] text-[20px] font-bold">Premium Quality</h4>
+        <p class="text-[#777777] text-[16px] font-bold my-5">Premium Quality that makes tea more elegant and more
+          durable when you use it.</p>
+      </div>
+    </section>
 
   </main>
 </body>
