--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <h1 class="text-[50px] md:text-[80px] font-bold text-[#1C1C1C]">It's good<br>tea time at The<br>Tea House</h1>
         <p class="text-[#777777] text-[18px] font-medium mb-3.5 ml-1">Tea and Botanical Solutions Supplier Give Optimum
           <br>
-          Satisfaction To Your Taste Buds.</p>
+          Satisfaction To Your Taste Buds.
+        </p>
         <button
           class="text-white bg-gradient-to-r from-[#ff8938] to-[#ff0000] rounded-[10px] p-4 text-[20px] font-medium">Explore
           More <span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
@@ -84,8 +85,10 @@
     <section class="flex flex-col md:flex-row gap-7 mb-12 mx-auto max-w-[1250px]">
       <div class="grid grid-cols-2 grid-rows-3 gap-7 md:w-1/2">
         <div class="bg-gradient-to-l from-[#ff0000] to-[#ff8938] opacity-10 rounded-[10px]"></div>
-        <div class="flex justify-center items-center p-6 md:p-12 bg-[#e6a6231a] row-span-2 rounded-[10px]"><img src="./images/fresh-1.png" alt=""></div>
-        <div class="flex justify-center items-center p-8 md:p-12 bg-[#5776391a] row-span-2 rounded-[10px]"><img src="./images/fresh-2.png" alt=""></div>
+        <div class="flex justify-center items-center p-6 md:p-12 bg-[#e6a6231a] row-span-2 rounded-[10px]"><img
+            src="./images/fresh-1.png" alt=""></div>
+        <div class="flex justify-center items-center p-8 md:p-12 bg-[#5776391a] row-span-2 rounded-[10px]"><img
+            src="./images/fresh-2.png" alt=""></div>
         <div class="bg-gradient-to-r from-[#d9d9d9] to-[#ffffff00] rounded-[10px]"></div>
       </div>
       <div class="md:w-1/2">
@@ -103,6 +106,46 @@
       </div>
     </section>
 
+    <!-- meet our clients -->
+    <section
+      class="max-w-[1250px] mx-auto mt-[100px] bg-gradient-to-r from-[#ff8938] to-[#ff0000] flex flex-col md:flex-row gap-4 p-5 h-[1200px] md:h-[600px] rounded-lg">
+      <div class="h-full md:w-1/2 text-white flex flex-col justify-center items-center">
+        <div>
+          <h1 class="text-4xl md:text-5xl font-bold">Meet Our Super<br> Clients</h1>
+          <p class="mt-8 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam velit delectus, perferendis
+            numquam consequatur assumenda similique illum officia ex hic distinctio temporibus, harum aliquid omnis.</p>
+          <button class="w-[139px] h-[56px] bg-white text-xl font-bold text-[#ff8938] rounded-lg">Show All</button>
+        </div>
+      </div>
+      <div class="h-full md:w-1/2 relative">
+        <div class="bg-white h-[210px] w-[70vw] md:w-[70%] rounded-xl p-10 absolute left-[5%] top-[32%] z-10">
+          <p class="">We are providing the best and suitable home insurance services for the people who are interested
+            to treatment.</p>
+          <h4 class="text-xl font-bold my-5">JH Rakib</h4>
+          <div class="absolute -top-[30px] -left-[30px] rounded-full bg-white p-1">
+            <img src="./images/client.png" alt="">
+          </div>
+          <div class="absolute right-4 bottom-4"><img src="./images/circles.png" alt=""></div>
+        </div>
+        <div
+          class="bg-white h-[210px] w-[70vw] md:w-[70%] rounded-xl p-10 absolute left-[20%] md:left-[20%] top-[10%] opacity-20">
+          <p class="">We are providing the best and suitable home insurance services for the people who are interested
+            to treatment.</p>
+          <h4 class="text-xl font-bold my-5">JH Rakib</h4>
+          <div class="absolute -top-[30px] -left-[30px] rounded-full bg-white p-1">
+            <img src="./images/client.png" alt="">
+          </div>
+        </div>
+        <div class="bg-white h-[210px] w-[70vw] md:w-[70%] rounded-xl p-10 absolute left-[20%] top-[55%] opacity-20">
+          <p class="">We are providing the best and suitable home insurance services for the people who are interested
+            to treatment.</p>
+          <h4 class="text-xl font-bold my-5">JH Rakib</h4>
+          <div class="absolute -top-[30px] -left-[30px] rounded-full bg-white p-1">
+            <img src="./images/client.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 
